# Brain-Engine-SDK

./: .gitignore  .pre-commit-config.yaml  README.md  demo.py  demo_day2.py  demo_day4.py  pyproject.toml
.github/workflows/: ci.yml
brain_engine/: __init__.py  capsule.py  cli.py  emit.py  glyphs.py  quantum.py
brain_engine/bridges/: __init__.py  clause_logic.py  entropy_classifiers.py
brain_engine/proof/: __init__.py  entropy_collapse_bridge.py  export_lean.py  export_tex.py  minisat_runner.py
brain_engine/report/: __init__.py  html_report.py
brain_engine/resonance/: __init__.py  resonance_deck.py
brain_engine/service/: app.py
lean/: lakefile.lean
lean/ProofSketch/: Sketch.lean
stubs/matplotlib/: __init__.pyi  pyplot.pyi
tests/: test_bridges.py  test_capsule.py  test_proof_exports.py  test_resonance_deck.py
