[project]
name = "brain-engine"
version = "0.1.0"
description = "IMM Brain-Engine SDK: glyphs, capsules, bridges, and service."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Derek", email = "dev@example.com" }]
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "pydantic>=2.7",
  "prometheus-client>=0.20",
  "matplotlib>=3.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "mypy>=1.11",
  "ruff>=0.6",
  "types-requests",
  "pre-commit>=3.7",
]

[project.scripts]
be = "brain_engine.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E","F","I","B","UP"]
ignore = ["E203"]  # allow black-like slicing spacing

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_any_generics = true
exclude = ["build", "dist", "\\.venv"]
mypy_path = ["stubs"]

[tool.pytest.ini_options]
addopts = "-q --cov=brain_engine --cov-report=term-missing"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
